@startuml

title __LEVELS's Class Diagram__\n

  namespace levels {
    class levels.EnemyOne {
        + EnemyOne()
        + autoMove()
        + getImage()
        + toString()
    }
  }
  

  namespace levels {
    class levels.EnemyThree {
        + EnemyThree()
        + autoMove()
        + getImage()
        + toString()
    }
  }
  

  namespace levels {
    class levels.EnemyTwo {
        + EnemyTwo()
        + autoMove()
        + getImage()
        + toString()
    }
  }
  

  levels.EnemyOne -up-|> nz.ac.vuw.ecs.swen225.gp20.maze.actors.AutoActor
  levels.EnemyThree -up-|> nz.ac.vuw.ecs.swen225.gp20.maze.actors.AutoActor
  levels.EnemyTwo -up-|> nz.ac.vuw.ecs.swen225.gp20.maze.actors.AutoActor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
